--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,7 @@
 </head>
 
 <body>
-  <h1>Express</h1>
-  <p>Welcome to Express</p>
+  <h1>My Student ID is 21225994. Welcome to Express</h1>
 </body>
 
 </html>
